<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadSheddingScheduleActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_left" />

    <LinearLayout
        android:id="@+id/linearLayoutSchedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSchedule">

        <TextView
            android:id="@+id/txtScheduleDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtScheduleDowntime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Downtime"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/btnSchedulePrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_circle_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtSchedulePrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnSchedulePrevious"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtScheduleNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnScheduleNext"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnScheduleNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_circle_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewDailySchedule"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSchedule" />

</androidx.constraintlayout.widget.ConstraintLayout>